ocp/fix-session/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: fix-session
  labels:
    app: fix-session
    app.kubernetes.io/component: fix-session
    app.kubernetes.io/instance: fix-session
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: fix-session
  template:
    metadata:
      labels:
        deployment: fix-session
    spec:
      containers:
        - name: fix-session
          image: >-
            image-registry.openshift-image-registry.svc:5000/demo/fix-session:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: '2'
              memory: 3Gi
            requests:
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
