ocp/fix-session/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fix-session
spec:
  selector:
    deployment: fix-session
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: tcp
      protocol: TCP
      port: 8199
      targetPort: 8199
